<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:padding="16dp">
    <EditText
        android:id="@+id/newText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="-1"
        android:inputType="textMultiLine"
        android:text="@string/before_editing"
        android:hint="@string/your_new_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newText"
        android:text="@string/save">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>
