<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/avatarImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/avatarimage"
        android:src="@drawable/avatarnetology"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/schoolname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/date"
        app:layout_constraintEnd_toStartOf="@id/menuButton"
        app:layout_constraintStart_toEndOf="@id/avatarImage"
        app:layout_constraintTop_toTopOf="@id/avatarImage" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@id/avatarImage"
        app:layout_constraintEnd_toStartOf="@id/menuButton"
        app:layout_constraintStart_toEndOf="@id/avatarImage"
        app:layout_constraintTop_toBottomOf="@id/schoolname" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuButton"
        style="@style/Widget.AppTheme.OptionsButton"
        app:icon="@drawable/options"
        android:checkable="true"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menubutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/schoolname"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatarImage, date, menuButton" />

    <!--    контент-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/barrier1"
        app:layout_constraintVertical_bias="1.0"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likes"
        style="@style/Widget.AppTheme.likeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:textSize="20sp"
        android:textColor="@color/grey"
        app:icon="@drawable/ic_likes_favorites_red"
        app:layout_constraintTop_toBottomOf="@+id/barrier2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/likes"
        app:layout_constraintEnd_toStartOf="@id/shares"
        tools:text="10">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shares"
        style="@style/Widget.AppTheme.shareCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:textSize="20sp"
        android:textColor="@color/grey"
        app:icon="@drawable/allshares"
        app:layout_constraintTop_toBottomOf="@+id/barrier2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/likes"
        android:contentDescription="@string/shares"
        app:layout_constraintEnd_toStartOf="@id/shares"
        tools:text="10">
    </com.google.android.material.button.MaterialButton>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/play"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="3dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/play"
        android:src="@drawable/ic_baseline_play_circle_outline_24"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/shares" />

    <TextView
        android:id="@+id/edited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/shares"
        app:layout_constraintTop_toTopOf="@id/shares"
        app:layout_constraintEnd_toStartOf="@id/looks" />

    <!--        справа-->


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/looks"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/looks"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/lookscount" />

    <TextView
        android:id="@+id/lookscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/looks"
        app:layout_constraintTop_toTopOf="@+id/looks"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="10" />

</androidx.constraintlayout.widget.ConstraintLayout>